...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1a1a1a">

    <TextView
        android:id="@+id/createReminderTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#2d2d2d"
        android:gravity="center_horizontal|center_vertical"
        android:text="Create Reminder"
        android:textColor="#75ffffff"
        android:textSize="24dp"
        android:textStyle="bold"
        android:visibility="visible" />

    <View
...
        android:text="Type:"
        android:textColor="#75ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/inputType"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/lineView"
        android:layout_marginTop="0dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
...
        android:textColor="#75ffffff"
        android:textColorHint="#40ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/inputDescription"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/lineView1"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
...
        android:textColor="#75ffffff"
        android:textColorHint="#40ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/inputTimeButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_below="@id/lineView3"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
...
        android:textColor="#40ffffff"
        android:textColorHighlight="#40ffffff"
        android:textColorHint="#40ffffff"
        android:textColorLink="#40ffffff" />

    <Button
        android:id="@+id/inputDateButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/inputTimeButton"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
...
        android:layout_height="41dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="#30ffffff"></View>

    <Button
        android:id="@+id/createReminderCancel"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignRight="@id/centerView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="1dp"
        android:background="#2d2d2d"
        android:text="Cancel"
        android:textColor="#95990000"
        android:visibility="visible" />

    <Button
        android:id="@+id/createReminderDone"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@id/centerView"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="1dp"
...
