...
    android:layout_height="wrap_content"
    android:background="#303030"
    android:padding="8dp"
    android:elevation="@android:dimen/app_icon_size">

    <TextView
        android:id="@+id/remListTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@id/listButton"
        android:layout_toRightOf="@id/checkAllButton"
        android:textColor="#85ffffff"
        android:textSize="24dp" />
    <!--android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"-->

    <EditText
        android:id="@+id/editRemListTitle"
...
